Finished with the introduction.

--- a/SIGEvolution.ipynb
+++ b/SIGEvolution.ipynb
@@ -14,9 +14,9 @@
       "#DEAP - Enabling Nimbler Evolutions\n",
       "by Fran\u00e7ois-Michel De Rainville, F\u00e9lix-Antoine Fortin, Marc-Andr\u00e9 Gardner, Marc Parizeau, and Christian Gagn\u00e9\n",
       "\n",
-      "DEAP is a Distributed Evolutionary Algorithm framework written in Python and designed to help researchers develop custom evolutionary algorithms. Its design philosophy promotes explicit algorithms and transparent data structures, in contrast with most other evolutionary computation softwares that tend to encapsulate standardized algorithms using the black-box approach. This philosophy sets it apart as a rapid prototyping framework for testing of new research ideas.\n",
+      "<img src=\"files/images/deap_highlights.png\" width=\"400px\" style=\"float:right\"/>\n",
       "\n",
-      "![caption](files/deap_highlights.png)\n",
+      "DEAP is a Distributed Evolutionary Algorithm framework written in Python and designed to help researchers develop custom evolutionary algorithms. Its design philosophy promotes explicit algorithms and transparent data structures, in contrast with most other evolutionary computation softwares that tend to encapsulate standardized algorithms using the black-box approach. This philosophy sets it apart as a rapid prototyping framework for testing of new research ideas.\n",
       "\n",
       "##Introduction\n",
       "\n",
@@ -72,8 +72,24 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "When an Individual is instantiated, its fitness property is initialized with an instance of the previously defined FitnessMin class. This is illustrated in the following example,\n",
-      "\\input{code/creator_inst}\n",
+      "When an Individual is instantiated, its fitness property is initialized with an instance of the previously defined FitnessMin class. This is illustrated in the following example,"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ind = creator.Individual([1,0,1,0,1])\n",
+      "ind.fitness.values = (sum(ind),)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "where an individual is created from a list of binary values and its fitness value is set to the sum of its elements.\n",
       "Fitness values, in DEAP, are always multi-objectives with the single objective case being a tuple of one element. This tuple is instantiated by the comma following the sum operation.\n",
       "\n",
@@ -86,43 +102,132 @@
       "- interchange operators efficiently,\n",
       "- regroup all operators in a single structure.\n",
       "\n",
-      "The next example presents the construction of a toolbox and how operators and their parameters are registered.\n",
-      "\\input{code/toolbox_ex}\n",
-      "The first operator is a one point crossover which is registered under the alias `mate`. The second operator, a gaussian mutation, is registered with its parameters under the generic name `mutate`.  Both operators are available from the \\textit{tools} module.\n",
-      "\n",
-      "During subsequent experiments, replacing the one point crossover by a two points crossover is as easy as substituting the third line of the previous listing by the following one.\n",
-      "\\input{code/toolbox_ex2}\n",
-      "Wherever the generic function named mate is used, the new two points crossover will be used instead.\n",
-      "\n",
-      "###Parallelization\n",
-      "DEAP is parallel ready. The idea is to use a \\texttt{map} operator for mapping data to function, for instance to evaluate fitness of individuals. By default, every toolbox is registered with the standard \\texttt{map} function of Python. For algorithms to evaluate individuals in parallel, one only needs to replace this alias by a parallel map such as the one provided by SCOOP~\\cite{3}, a library capable of distributing tasks over a cluster of computers.\n",
-      "\\input{code/scoop}\n",
-      "DEAP is also compatible with the \\textit{multiprocessing} standard module, if the user only cares to run on a single multicore machine.\n",
-      "\\input{code/multiproc}\n",
-      "\n",
-      "With these powerful tools, DEAP allows scientists and researchers with little programming knowledge to easily implement distributed evolutionary algorithms."
+      "The next example presents the construction of a toolbox and how operators and their parameters are registered."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "from deap import tools\n",
+      "toolbox = base.Toolbox()\n",
+      "toolbox.register(\"mate\", tools.cxOnePoint)\n",
+      "toolbox.register(\"mutate\", tools.mutGaussian, mu=0.0, std=1.0)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "The first operator is a one point crossover which is registered under the alias \"mate\". The second operator, a gaussian mutation, is registered with its parameters under the generic name \"mutate\".  Both operators are available from the *tools* module.\n",
+      "\n",
+      "During subsequent experiments, replacing the one point crossover by a two points crossover is as easy as substituting the third line of the previous listing by the following one."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "toolbox.register(\"mate\", tools.cxTwoPoints)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Wherever the generic function named mate is used, the new two points crossover will be used instead.\n",
+      "\n",
+      "###Parallelization\n",
+      "DEAP is parallel ready. The idea is to use a `map` operator for mapping data to function, for instance to evaluate fitness of individuals. By default, every toolbox is registered with the standard `map` function of Python. For algorithms to evaluate individuals in parallel, one only needs to replace this alias by a parallel map such as the one provided by [SCOOP](#scoop), a library capable of distributing tasks over a cluster of computers."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scoop import futures\n",
+      "toolbox.register(\"map\", futures.map)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "DEAP is also compatible with the *multiprocessing* standard module, if the user only cares to run on a single multicore machine."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import multiprocessing\n",
+      "pool = multiprocessing.Pool()\n",
+      "toolbox.register(\"map\", pool.map)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "With these powerful tools, DEAP allows scientists and researchers with little programming knowledge to easily implement distributed evolutionary algorithms."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##References\n",
+      "\n",
+      "- [1] F.-A. Fortin, F.-M. De Rainville, M.-A. Gardner, M.~Parizeau, and C. Gagn\u00e9.\n",
+      "DEAP: Evolutionary Algorithms Made Easy.\n",
+      "\\emph{Journal of Machine Learning Research},\n",
+      "13:2171--2175, 2012.\n",
+      "\n",
+      "- [2] F.-M. De Rainville, F.-A. Fortin, M.-A. Gardner, M.~Parizeau, and C. Gagn\u00e9.\n",
+      "DEAP: A Python Framework for Evolutionary Algorithms. \n",
+      "\\emph{In Companion Proceedings of the Genetic and Evolutionary Computation Conference},\n",
+      "pages 85--92, 2012.\n",
+      "\n",
+      "- <a id=\"scoop\">[3]</a> Y. Hold-Geoffroy, O. Gagnon, and M. Parizeau.\n",
+      "SCOOP: Scalable COncurrent Operations in Python.\n",
+      "<http://www.pyscoop.org/>\n",
+      "\n",
+      "- [4] J. R. Koza.\n",
+      "Genetic Programming - On the Programming of Computers by Means of Natural Selection.\n",
+      "MIT Press, 1992.\n",
+      "\n",
+      "- [5] A. A. Hagberg, D. A. Schult, and P. J. Swart. \n",
+      "Exploring network structure, dynamics, and function using NetworkX.\n",
+      "\\emph{In Proceedings of the Python in Science Conference},\n",
+      "pages 11-15, 2008.\n",
+      "<http://networkx.github.io>\n",
+      "\n",
+      "- [6] A. A. Hagberg, D. A. Schult, and M. Renieris.\n",
+      "PyGraphviz a Python interface to the Graphviz graph layout and visualization package.\n",
+      "<http://networkx.lanl.gov/pygraphviz>\n",
+      "\n",
+      "- [7] E. Jones and T. Oliphant and P. Peterson and others.\n",
+      "SciPy: Open source scientific tools for Python.\n",
+      "<http://www.scipy.org>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# This makes things pretty\n",
       "from IPython.core.display import HTML\n",
       "def css_styling():\n",
       "    styles = open(\"styles/custom.css\", \"r\").read()\n",
@@ -196,21 +301,13 @@
         "</script>"
        ],
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 4,
        "text": [
-        "<IPython.core.display.HTML at 0x105658f50>"
+        "<IPython.core.display.HTML at 0x105658a90>"
        ]
       }
      ],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "prompt_number": 4
     }
    ],
    "metadata": {}
