Done with the one max example.

--- a/SIGEvolution.ipynb
+++ b/SIGEvolution.ipynb
@@ -14,7 +14,7 @@
       "#DEAP - Enabling Nimbler Evolutions\n",
       "by Fran\u00e7ois-Michel De Rainville, F\u00e9lix-Antoine Fortin, Marc-Andr\u00e9 Gardner, Marc Parizeau, and Christian Gagn\u00e9\n",
       "\n",
-      "<img src=\"files/images/deap_highlights.png\" width=\"400px\" style=\"float:right\"/>\n",
+      "<img src=\"files/images/deap_highlights.png\" width=\"400px\" style=\"float:right;margin-left:50px;\"/>\n",
       "\n",
       "DEAP is a Distributed Evolutionary Algorithm framework written in Python and designed to help researchers develop custom evolutionary algorithms. Its design philosophy promotes explicit algorithms and transparent data structures, in contrast with most other evolutionary computation softwares that tend to encapsulate standardized algorithms using the black-box approach. This philosophy sets it apart as a rapid prototyping framework for testing of new research ideas.\n",
       "\n",
@@ -182,6 +182,208 @@
      "metadata": {},
      "source": [
       "With these powerful tools, DEAP allows scientists and researchers with little programming knowledge to easily implement distributed evolutionary algorithms."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##Preaching by Example\n",
+      "\n",
+      "The best introduction to evolutionary computation with DEAP consists in presenting simple yet compelling examples. The following sections set forth how algorithms are easy to implement while keeping a strong grip on how they behave. The first section introduces a classical genetic algorithm and exposes different levels of explicitness. The following section presents how genetic programming is implemented in DEAP and the versatility of the GP module. The final example demonstrate how easy it is to implement a generic distributed island model with SCOOP.\n",
+      "\n",
+      "###A Simple Genetic Algorithm\n",
+      "A commonly used example in evolutionary computation is the OneMax problem which consists in maximizing the number of ones by solution. The more ones an individual contains, the higher its fitness value. Using a genetic algorithm to find such an individual is relatively straightforward. Applying crossovers and mutations on a population of randomly generated binary individuals and selecting the fittest ones at each generation usually lead quickly to a perfect solution. A problem of this simplicity should be solved with a very simple program."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import random\n",
+      "from deap import algorithms, base, creator, tools\n",
+      "\n",
+      "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+      "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+      "\n",
+      "def evalOneMax(individual):\n",
+      "    return (sum(individual),)\n",
+      "\n",
+      "toolbox = base.Toolbox()\n",
+      "toolbox.register(\"attr_bool\", random.randint, 0, 1)\n",
+      "toolbox.register(\"individual\", tools.initRepeat, creator.Individual, toolbox.attr_bool, n=100)\n",
+      "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
+      "toolbox.register(\"evaluate\", evalOneMax)\n",
+      "toolbox.register(\"mate\", tools.cxTwoPoints)\n",
+      "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
+      "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    pop = toolbox.population(n=300)\n",
+      "    algorithms.eaSimple(pop, toolbox, cxpb=0.5, mutpb=0.2, ngen=40)\n",
+      "    print(tools.selBest(pop, k=1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The preceeding code presents all that is needed to solve the OneMax problem with DEAP. The first two lines import the necessary modules. Next, on lines 4 and 5, two types are created; a maximizing fitness - note the positive `weights` -, and a list individual composed with an instance of this maximizing `fitness`. Then, on lines 7 and 8, the evaluation function is defined. It counts the number of ones in a binary list by summing its elements - note again the one element tuple corresponding to a single objective. Subsequently, a Toolbox is instantiated in which the necessary operators are registered. The first operator, on line 11, produces binary values, in this case integers in $[0, 1]$, using the standard *random* module. The next operator, on line 12, instantiates an `Individual` of `n=100` bits by calling repeatedly the registered `attr_bool` operator. The same repetition initializer is used on the next line to produce a population as a list of individuals. The missing number of repetition `n` will be given later in the program. Subsequently, on lines 14 to 17, the evaluation, crossover, mutation and selection operators are registered with all of their parameters.\n",
+      "\n",
+      "The main program starts at line 19. First, a population of `n=300` individuals is instantiated. Then, the algorithm, provided with the population and the toolbox, is run for `ngen=40` generations with `cxpb=50%` chances of mating and `mutpb=20%` chances of mutating an individual for each generation. Finally, on line 22, the best individual of the resulting population is selected and displayed on screen. The double list of the printed individual is related to the select functions that return in all cases a list, here of one element.\n",
+      "\n",
+      "###Controlling Everything\n",
+      "When developing, researching or using evolutionary algorithms, pre-implemented canned algorithms seldom do everything that is needed. Usually, developers/researchers/users have to dig into the framework to tune, add or replace a part of the original algorithm. DEAP breaks with the traditional black-box approach on that precise point; it encourages users to rapidly build their own algorithms. With the different tools provided by DEAP, it is possible to design a nimble algorithm that tackles most any problem at hand."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import random\n",
+      "from deap import algorithms, base, creator, tools\n",
+      "\n",
+      "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+      "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+      "\n",
+      "def evalOneMax(individual):\n",
+      "    return (sum(individual),)\n",
+      "\n",
+      "toolbox = base.Toolbox()\n",
+      "toolbox.register(\"attr_bool\", random.randint, 0, 1)\n",
+      "toolbox.register(\"individual\", tools.initRepeat, creator.Individual, toolbox.attr_bool, n=100)\n",
+      "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
+      "toolbox.register(\"evaluate\", evalOneMax)\n",
+      "toolbox.register(\"mate\", tools.cxTwoPoints)\n",
+      "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
+      "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    pop = toolbox.population(n=300)\n",
+      "    \n",
+      "    ngen, cxpb, mutpb = 40, 0.5, 0.2\n",
+      "    fitnesses = toolbox.map(toolbox.evaluate, pop)\n",
+      "    for ind, fit in zip(pop, fitnesses):\n",
+      "        ind.fitness.values = fit\n",
+      "\n",
+      "    for g in range(ngen):\n",
+      "        pop = toolbox.select(pop, k=len(pop))\n",
+      "        pop = algorithms.varAnd(pop, toolbox, cxpb, mutpb)\n",
+      "        \n",
+      "        invalids = [ind for ind in pop if not ind.fitness.valid]\n",
+      "        fitnesses = toolbox.map(toolbox.evaluate, invalids)\n",
+      "        for ind, fit in zip(invalids, fitnesses):\n",
+      "            ind.fitness.values = fit\n",
+      "    \n",
+      "    print(tools.selBest(pop, k=1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Starting from the previous OneMax solution, a first decomposition of the algorithm replaces the canned `eaSimple` function (line 21) by the generational loop illustrated in between lines 22 and 33. Again, this example is exhaustive but still very simple. On the first 3 new lines (23 to 25), the evaluation is applied to every individual in the population by the `map` function contained in every toolbox. Next, a loop over both the population and the evaluated fitnesses sets each individual's fitness value. Thereafter, the generational loop begins. It starts by selecting `k` individuals from the population. Then, the selected individuals are *var* ied by the crossover *and* mutation of the toolbox. Once modified, the individuals are evaluated for the next iteration. Only freshly produced individuals have to be evaluated; they are filtered by their fitness validity (line 31). This version of the program provides the possibility to change the stopping criterion and add components to the evolution."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import random\n",
+      "from deap import algorithms, base, creator, tools\n",
+      "\n",
+      "creator.create(\"FitnessMax\", base.Fitness, weights=(1.0,))\n",
+      "creator.create(\"Individual\", list, fitness=creator.FitnessMax)\n",
+      "\n",
+      "def evalOneMax(individual):\n",
+      "    return (sum(individual),)\n",
+      "\n",
+      "toolbox = base.Toolbox()\n",
+      "toolbox.register(\"attr_bool\", random.randint, 0, 1)\n",
+      "toolbox.register(\"individual\", tools.initRepeat, creator.Individual, toolbox.attr_bool, n=100)\n",
+      "toolbox.register(\"population\", tools.initRepeat, list, toolbox.individual)\n",
+      "toolbox.register(\"evaluate\", evalOneMax)\n",
+      "toolbox.register(\"mate\", tools.cxTwoPoints)\n",
+      "toolbox.register(\"mutate\", tools.mutFlipBit, indpb=0.05)\n",
+      "toolbox.register(\"select\", tools.selTournament, tournsize=3)\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    pop = toolbox.population(n=300)\n",
+      "    \n",
+      "    ngen, cxpb, mutpb = 40, 0.5, 0.2\n",
+      "    fitnesses = toolbox.map(toolbox.evaluate, pop)\n",
+      "    for ind, fit in zip(pop, fitnesses):\n",
+      "        ind.fitness.values = fit\n",
+      "\n",
+      "    for g in range(ngen):\n",
+      "        pop = toolbox.select(pop, k=len(pop))\n",
+      "        pop = [toolbox.clone(ind) for ind in pop]\n",
+      "\n",
+      "        for child1, child2 in zip(pop[::2], pop[1::2]):\n",
+      "            if random.random() < cxpb:\n",
+      "                toolbox.mate(child1, child2)\n",
+      "                del child1.fitness.values, child2.fitness.values\n",
+      "\n",
+      "        for mutant in pop:\n",
+      "            if random.random() < mutpb:\n",
+      "                toolbox.mutate(mutant)\n",
+      "                del mutant.fitness.values\n",
+      "        \n",
+      "        invalids = [ind for ind in pop if not ind.fitness.valid]\n",
+      "        fitnesses = toolbox.map(toolbox.evaluate, invalids)\n",
+      "        for ind, fit in zip(invalids, fitnesses):\n",
+      "            ind.fitness.values = fit\n",
+      "    \n",
+      "    print(tools.selBest(pop, k=1))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]]\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "An even greater level of detail can be obtained by substituting the `varAnd` function by its full content, presented in last code snippet. The added lines (29 to 39) start with the duplication of the population by the `clone` tool available in every toolbox. Then, the crossover is applied to a portion of consecutive individuals . Each modified individual sees its fitness invalidated on line 26. Finally, a percentage of the population is mutated and their fitness is also deleted. This variant of the algorithm provides control over the application order and the number of operators, among many other aspects.\n",
+      "\n",
+      "The explicitness in which algorithm are written with DEAP clarifies the experiments. This eliminates any ambiguity on the different aspects of the algorithm that could, when overlooked, jeopardize the reproducibility and interpretation of results. With this level of detail, users are provided with unprecedented agility in their research.\n",
+      "\n",
+      "###Genetic Programming\n",
+      "DEAP also includes every component necessary to design genetic programming algorithms with the same ease as for genetic algorithms. For example, the most commonly used tree individual can be created as following.\n",
+      "\\input{code/gp_creator}"
      ]
     },
     {
