Typo + Plot Update: Finaly -> Finally. Code as is will not show the plot once data is populated. Adding .

--- a/OneMax.ipynb
+++ b/OneMax.ipynb
@@ -201,7 +201,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The evaluation is given the alias `evaluate`. Having a single argument being the individual to evaluate we don\u2019t need to fix any, the individual will be given later in the algorithm. The two points crossover function is registered the same way under the alias `mate`. The mutation, for its part, needs an argument to be fixed (the independent probability of each attribute to be mutated `indpb`). In the algorithms the `mutate()` function is called with the signature `toolbox.mutate(mutant)`. This is the most convenient way because each mutation takes a different number of arguments, having those arguments fixed in the toolbox leave open most of the possibilities to change the mutation (crossover, selection, or evaluation) operator later in your researches. Finaly, the selection operator is registered under the name `select` and the size of the tournament set to 3.\n",
+      "The evaluation is given the alias `evaluate`. Having a single argument being the individual to evaluate we don\u2019t need to fix any, the individual will be given later in the algorithm. The two points crossover function is registered the same way under the alias `mate`. The mutation, for its part, needs an argument to be fixed (the independent probability of each attribute to be mutated `indpb`). In the algorithms the `mutate()` function is called with the signature `toolbox.mutate(mutant)`. This is the most convenient way because each mutation takes a different number of arguments, having those arguments fixed in the toolbox leave open most of the possibilities to change the mutation (crossover, selection, or evaluation) operator later in your researches. Finally, the selection operator is registered under the name `select` and the size of the tournament set to 3.\n",
       "\n",
       "We can for example mutate an individual and expect 10% of its attributes to be flipped."
      ]
@@ -313,7 +313,8 @@
       "    plt.plot(gen, max_, label=\"maximum\")\n",
       "    plt.xlabel(\"Generation\")\n",
       "    plt.ylabel(\"Fitness\")\n",
-      "    plt.legend(loc=\"lower right\")"
+      "    plt.legend(loc=\"lower right\")\n",
+      "    plt.show()"
      ],
      "language": "python",
      "metadata": {},
